# Basiq-UDA

./: README.md
.github/ISSUE_TEMPLATE/: bug-report.md  fr-request.md
.github/workflows/: dart-build.yml  dart-dev.yml  dart-lint.yml  flutter-build.yml  rust-build.yml  rust-dev.yml  rust-lint.yml  rust-prod.yml  rust-staging.yml
BE/: .gitignore  Cargo.toml
BE/Basiq_API/: APIKEY.env.dst  Cargo.toml
BE/Basiq_API/src/: lib.rs  requestHandler.rs  request_handler.rs
BE/Basiq_API/src/Core/AuthLinks/: create_auth_link.rs  delete_auth_link.rs  retrieve_auth_link.rs
BE/Basiq_API/src/Core/Authentication/: gen_auth.rs
BE/Basiq_API/src/Core/Consents/: delete_consent.rs  retrieve_consents.rs
BE/Basiq_API/src/Core/Jobs/: create_mfa_response.rs  get_user_jobs.rs  retrieve_job.rs
BE/Basiq_API/src/Core/Users/: create_user.rs  delete_user.rs  retrieve_user.rs  update_user.rs
BE/Basiq_API/src/Data/Accounts/: get_user_accounts.rs
BE/Basiq_API/src/Net/: auth_client.rs
BE/SXL/: Cargo.toml
BE/SXL/src/: lib.rs
BE/ServersideLogger/: Cargo.toml
BE/ServersideLogger/src/: lib.rs
BE/UDA_Logger/: Cargo.toml
BE/UDA_Logger/src/: lib.rs
BE/src/: main.rs
FE/: README.md  pubspec.yaml
FE/.run/: Run App.run.xml
FE/lib/: callback.dart  homepage.dart  landingpage.dart  signup.dart  transactions.dart  utils.dart
FE/test/: RFCTest.dart  rfc_test.dart
FE/web/: index.html  manifest.json
