[package]
name = "BE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0"
serde_json = "^1"
Basiq_API = {path = "./Basiq_API", version = "0.1.0"}
SXL = {version = "0.1.0", path = "./SXL"}
actix-web = "^4"
