[package]
name = "SallyAx-Backend"
version = "0.1.0"
edition = "2021"
description = "The backend for the SallyAX Application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0"
serde_json = "^1"
Basiq_API = {path = "./Basiq_API", version = "0.1.0"}
SXL = {version = "0.1.0", path = "./SXL"}
actix-web = "^4"
qstring = "^0"
