[package]
name = "sally_ax_backend"
version = "0.1.0"
edition = "2021"
description = "The backend for the SallyAX Application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0"
serde_json = "^1"
basiq_api = {path = "./Basiq_API", version = "0.1.0"}
sxl = {version = "0.1.0", path = "./SXL"}
Logger = {version = "0.1.0", path = "./ServersideLogger", package = "serverside_logger"}
actix-web = "^4"
qstring = "^0"
tokio = "1.35.1"
base64 = "0.21.7"
