[package]
name = "Basiq_API"
version = "0.1.0"
edition = "2021"
description = "The Basiq wrapper used for the SallyAX Application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
serde_json = "1.0.108"
SXL = {version = "0.1.0", path = "../SXL"}
Logger ={version = "0.1.0", path = "../ServersideLogger", package = "ServersideLogger"}
