[package]
name = "sxl"
version = "0.1.0"
edition = "2021"
description = "The SallyAX Logger Implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
serde_json = "1.0.108"
Logger = {version = "0.1.0", path = "../ServersideLogger", package = "serverside_logger"}
